Fix ac-wrap mobile

--- a/assets/stylesheets/mobile/quick_mobile.scss
+++ b/assets/stylesheets/mobile/quick_mobile.scss
@@ -38,6 +38,11 @@
     }
   }
 
+  .docked-composer-header .ac-wrap {
+    margin: 9px 0;
+    line-height: initial;
+  }
+
   .docked-usernames {
     font-size: 1.1em;
   }
